--- a/AWS_ASSIGN.html
+++ b/AWS_ASSIGN.html
@@ -14,6 +14,8 @@ body {
 
 <h1>My Website</h1>
 <p>A website created for AWS assignment 2 by Saranya.</p>
+<p>I am testing </p>
+<p>Yes i completed my assignment</p>  
 
 </body>
 </html>
